istio-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
